<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caci.mapsample.MainActivity"
    android:orientation="vertical"
    android:background="@color/bkgrnd"
    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/epa_banner"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:text="@string/splash_lbl_welcome"
            android:id="@+id/txt_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="10dp"/>

        <TextView
            android:text="@string/splash_lbl_filter"
            android:id="@+id/txt_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spinner_spacing_padding"
            android:layout_marginTop="@dimen/spinner_spacing_padding"
            >

            <TextView
                android:text="@string/splash_lbl_filter_state"
                android:id="@+id/lbl_state_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/spinner_spacing_padding"
            android:layout_marginTop="@dimen/spinner_spacing_padding"
            >

            <TextView
                android:text="@string/splash_lbl_filter_cause"
                android:id="@+id/lbl_cause_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingTop="2dp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/cause_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                />

        </LinearLayout>

        <TextView
            android:text="@string/splash_lbl_loading"
            android:id="@+id/txt_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_lbl_map"
            android:id="@+id/btn_map"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>
